<?xml version="1.0"?>
<package format="3">
  <name>gesture_bridge</name>
  <version>0.0.0</version>
  <description>Gesture to ROS2 bridge</description>

  <maintainer email="yashda@todo.todo">yashda</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
